# image-playground

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  convolve_test.cpp  edge_filter.cpp  fourier_test.cpp
examples/outputs/: README.md
include/image_playground/: blur.h  color.h  convolve.h  edges.h  file_helpers.h  fourier.h  gray_scale.h  image.h  math.h  profile.h  types.h
include/image_playground/templates/: image.tpp  math.tpp
src/: blur.cpp  color.cpp  convolve.cpp  edges.cpp  file_helpers.cpp  fourier.cpp  gray_scale.cpp  image.cpp  image.h  main.cpp  profile.cpp
